# software-testing

./: .gitignore  Make.common  Makefile  README.md  all_compilers_test.sh  all_tacc_tests.sh  cmake_build_single.sh  cmake_test.sh  cmake_test_driver.sh  cmake_test_single.sh  compilers.sh  compilers_frontera.sh  compilers_ls6.sh  compilers_stampede3.sh  compilers_vista.sh  configurations.sh  driver_options.sh  existence_test.sh  failure.sh  functions.sh  glibc.sh  info_test.sh  ldd_test.sh  list_installed.sh  load_and_test.sh  local_tests.sh  make_build_single.sh  make_test_driver.sh  options.sh  petsc_build_single.sh  petsc_test_driver.sh  python_run_single.sh  python_test_driver.sh  setup.sh  submit_test.sh  summarize_all.sh  summarize_package.sh  summarize_script.ls6  tacc_tests.sh  test_all_compilers.sh  (+3 more)
adios2/: Configuration  adios2_tests.sh  local_tests.sh  package.sh  tacc_tests.sh
adios2/F90/: CMakeLists.txt  values.F90
adios2/cpp/: CMakeLists.txt
alps/: alps_tests.sh  package.sh
arpack/: arpack_tests.sh  local_tests.sh  package.sh  tacc_tests.sh
arpack/f/: CMakeLists.txt
aspect/: aspect_tests.sh  package.sh
aspect/cpp/: CMakeLists.txt  common.h  first.cpp
basix/: basix_tests.sh  package.sh
berkeleygw/: Configuration
bison/: Configuration  bison_tests.sh  package.sh
blis/: Makefile  blis_tests.sh  package.sh
boost/: Configuration  boost_tests.sh  local_tests.sh  package.sh  tacc_tests.sh
boost/cpp/: CMakeLists.txt  graphviz.cpp  log.cpp  system.cpp
cantera/: cantera_tests.sh  package.sh
catch2/: Configuration  catch2_tests.sh  package.sh
catch2/cxx/: CMakeLists.txt  has.cxx
cfitsio/: Makefile  cfitsio_tests.sh  package.sh  tacc_tests.sh
cfitsio/c/: CMakeLists.txt
cfitsio/f/: CMakeLists.txt
cmake/: cmake_tests.sh  package.sh
compiler/: compiler_tests.sh  package.sh
compiler/c/: CMakeLists.txt  limits.c
cuda/: Makefile  cuda_tests.sh  package.sh
cuda/cu/: CMakeLists.txt  Makefile  config.cu  device.cu
cudampi/: cuda_tests.sh  package.sh
cudampi/cu/: CMakeLists.txt  Makefile  device.cu
cxxopts/: Configuration  Makefile  cxxopts_tests.sh  local_tests.sh  package.sh  tacc_test.sh  tacc_tests.sh
cxxopts/cxx/: CMakeLists.txt
dealii/: Configuration  Makefile  dealii_tests.sh  package.sh
dealii/cpp/: CMakeLists.txt  has_p4est.cpp  has_petsc.cpp
eigen/: Configuration  eigen_tests.sh  local_test.sh  local_tests.sh  package.sh  tacc_test.sh  tacc_tests.sh
eigen/cxx/: CMakeLists.txt  has.cxx
ffcx/: ffcx_tests.sh  package.sh
fftw2/: fftw2_tests.sh  local_tests.sh  package.sh  tacc_tests.sh
fftw3/: Configuration  Makefile  fftw3_tests.sh  local_test.sh  local_tests.sh  package.sh  tacc_test.sh  tacc_tests.sh
fftw3/cxx/: CMakeLists.txt
fftw3single/: Makefile  fftw3_tests.sh  package.sh
fftw3single/F90/: CMakeLists.txt
fftw3single/cf/: CMakeLists.txt
fisoc/: dealloc.F90  fisoc_tests.sh
fmtlib/: Configuration  fmtlib_tests.sh  local_test.sh  local_tests.sh  package.sh  tacc_tests.sh
gcc/: gcc_tests.sh  package.sh
gdal/: gdal_tests.sh  package.sh
ginkgo/: ginkgo_tests.sh  package.sh
gmp/: gmp_tests.sh  package.sh
gmsh/: gmsh_tests.sh  package.sh
gnuplot/: Configuration  notes.txt
gsl/: Configuration  gsl_tests.sh  package.sh
gsl/cxx/: CMakeLists.txt  solve.cxx
hdf5/: Configuration  Makefile  fmod_frontera_jail.sh  fmod_ls6.sh  fmod_tacc.sh  fmod_test.sh  fmod_work.sh  hdf5_tests.sh  local_tests.sh  package.sh  phdf5_tests.sh  tacc_test.sh  tacc_tests.sh
hdf5/cxx/: CMakeLists.txt  hasx.cxx
highfive/: Makefile  package.sh
highfive/cpp/: CMakeLists.txt
hmmer/: hmmer_tests.sh  package.sh
hypre/: hypre_tests.sh  local_test.sh  local_tests.sh  package.sh  tacc_test.sh  tacc_tests.sh
hypre/c/: CMakeLists.txt
hypre/f/: CMakeLists.txt
intel/: local_tests.sh  package.sh
jsonc/: package.sh
jsonc/cxx/: CMakeLists.txt  has.cxx
kokkos/: Configuration  Configuration.cuda  Configuration.omp  Makefile  glibc_fix.sh  kokkos_gpu_tests.sh  kokkos_tests.sh  local_test.sh  local_tests.sh  package.sh  tacc_tests.sh
kokkos/cxx/: CMakeLists.txt  enabled-cuda.cxx  enabled-omp.cxx  enabled-sycl.cxx
lapack/: lapack_tests.sh  local_tests.sh  ls6_intel24.txt  package.sh  tacc_tests.sh
lapack/F90/: CMakeLists.txt  convention.F90  lapack95.F90
libmesh/: libmesh_tests.sh  package.sh
libmesh/cxx/: CMakeLists.txt  introduction_ex1.cxx
libxc/: Configuration
mdspan/: local_test.sh  local_tests.sh  mdspan_tests.sh  package.sh  tacc_tests.sh
mdspan/cxx/: CMakeLists.txt  has.cxx
metis/: Configuration  metis_tests.sh  package.sh
metis64/: metis_tests.sh  package.sh
metis64/c/: CMakeLists.txt  has.c
mfem/: Makefile  local_tests.sh  mfem_tests.sh  package.sh  tacc_tests.sh
mfem/cpp/: CMakeLists.txt
mpfr/: mpfr_tests.sh  package.sh
mpi/: Configuration  Makefile  local_tests.sh  mpi_tests.sh  mpif08.sh  package.sh  tacc_tests.sh
mpi/F90/: CMakeLists.txt  allreduce.F90  hdf5async.F90  mpif08.F90  mpif90.F90
mpl/: mpl_tests.sh  package.sh  tacc_tests.sh
mumps/: Makefile  mumps_tests.sh  package.sh
nanobind/: nanobind_test.sh  nanobind_tests.sh  package.sh  testline.sh
nekrs/: nekrs_tests.sh  package.sh
nekrsgpu/: Makefile  nekrs_tests.sh  package.sh
netcdf/: Configuration  Configuration.development  Configuration.production  Configuration.seq_fortran  Makefile  local_tests.sh  netcdf_tests.sh  package.sh  tacc_tests.sh
netcdff/: Configuration  local_tests.sh  netcdff_tests.sh  package.sh  tacc_tests.sh
netcdffortran/: local_tests.sh  netcdffortran_tests.sh  tacc_tests.sh
ninja/: ninja_tests.sh  package.sh
octopus/: Configuration  octopus_tests.sh  package.sh
p4est/: Configuration  local_tests.sh  p4est_tests.sh  package.sh  tacc_tests.sh
parallelnetcdf/: Configuration  Makefile  local_tests.sh  package.sh  parallelnetcdf_tests.sh  tacc_tests.sh
parallelnetcdff/: Configuration  Makefile  local_tests.sh  package.sh  parallelnetcdff_tests.sh  tacc_tests.sh
parmetis/: Configuration  local_tests.sh  package.sh  parmetis_tests.sh  tacc_tests.sh
parpack/: package.sh  (+1 more)
(+316 files in other folders)
